src/main/java/com/example/GemSkillAssessment/error/NotImplementedException.java
package com.example.GemSkillAssessment.error;

public class NotImplementedException extends RuntimeException {
    public NotImplementedException(String message) {
        super(message);
    }
}
